--- a/jspsych/RT_rand_cmb.html
+++ b/jspsych/RT_rand_cmb.html
@@ -43,26 +43,8 @@ for (var i = 0; i < arrayLength; i++) {
     }
 }
 
-// timeline.push(shuffledArray)
+timeline.push(shuffledArray)
 
-
-// var rand_procedure = {
-//   timeline: timeline
-//   timeline_variables: sub_experiments,
-//   randomize_order: true
-// }
-
-// var training_procedure = {
-//     timeline: [training_fixation, training],
-//     timeline_variables: training_stimuli,
-//     randomize_order: true,
-//     repetitions: 2
-
-// }
-
-// timeline.push(instructions);
-//   timeline.push(test_procedure);
-//   timeline.push(debrief_block);
 
 
 var images = ['img/cross.png','img/blankbox.png','img/cRT_fix.png', 'img/cRT1.png', 'img/cRT2.png', 'img/cRT3.png', 'img/cRT4.png'];
@@ -70,10 +52,10 @@ var audio = ['sounds/452sine.mp3'];
 
      /* start the experiment */
      jsPsych.init({
-      timeline: timeline,
+      timeline: timeline_sa, //use timeline for running all or timeline_sv /timeline_sa /timeline_cv for testing individual sub-experiments
       preload_images: images,
       preload_audio: audio,
-      use_webaudio: true,
+      use_webaudio: false, // set to true in production
       on_finish: function() {
         jsPsych.data.displayData();
       }
